--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,39 +1,17 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      nodejs: 20
-    commands:
-      # - echo "Node version:"
-      # - node -v
-      # - npm -v
-      - npm install
-
   pre_build:
     commands:
-      # - echo "Repo      : $REPO_NAME"
-      # - echo "Branch    : $BRANCH_NAME"
-      # - echo "Commit ID : $COMMIT_ID"
-
-      # # Clone dynamicallyyyyyy
-      # - git clone https://github.com/$REPO_NAME.git
-      # - cd $REPO_NAME
-      # - git checkout $BRANCH_NAME
-      # - git checkout $COMMIT_ID || echo "Using branch HEAD"
-
-      - npm install
+      - echo "Login to Docker Hub"
+      - echo ${DOCKERHUB_PASSWORD} | docker login -u ${DOCKERHUB_USERNAME} --password-stdin
 
   build:
     commands:
-      - npm run build
+      - docker build -t kirana-docker:latest .
+      
 
-  # post_build:
-  #   commands:
-  #     - echo "Deploying React build to S3"
-  #     - aws s3 sync build/ s3://$S3_BUCKET --delete
-
-artifacts:
-  base-directory: dist
-  files:
-    - '**/*'
+  post_build:
+    commands:
+      - docker tag kirana-docker:latest ${DOCKERHUB_USERNAME}/kirana-docker:latest
+      - docker push ${DOCKERHUB_USERNAME}/kirana-docker:latest
